# shomer-backend

./: .gitignore  ARCHITECTURE.md  DISABLE_EMAIL_NOTIFICATIONS.md  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.github/: settings.yml
.github/workflows/: ci.yml
api/: __init__.py  main.py
cli/: __init__.py
cli/shomer/: __init__.py  __main__.py
cmd/: __init__.py
cmd/shomer/: __init__.py  __main__.py
internal/: __init__.py  config.py  pipeline.py
internal/classify/: __init__.py  classifier.py
internal/crypto/: __init__.py  hash.py  sign.py
internal/custody/: __init__.py  logger.py
internal/ingest/: __init__.py  fetcher.py
internal/map_law/: __init__.py
internal/pack/: __init__.py  manifest.py  packer.py
internal/pii/: __init__.py  detector.py  pseudonymizer.py
internal/store/: __init__.py  case_store.py  vault.py
scripts/: __init__.py  seed_urls.py
tests/: TEST_DATA_REQUIREMENTS.md  __init__.py  conftest.py  test_crypto.py  test_custody.py  test_integration.py  test_manifest.py  test_pii.py  test_store.py
tests/fixtures/: mock_responses.py  sample_data.py
